# scan_cl

./: CMakeLists.txt  README.md  resources.qrc  rot.py
algo/: amerge.py  clean.py  crop.py
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  ProcessFragment.cpp  ProcessFragment.h  ProcessFragment.ui  Scanner.cpp  Scanner.h  app.cpp  app.h  colors.h  jsonimports.cpp  jsonimports.h  main.cpp  qcoroimports.h  qtimports.h  stdimports.h  utils.cpp  utils.h  works.cpp  works.h
src/components/: BookEditor.cpp  BookEditor.h  BookEditor.ui  PageNavWidget.cpp  PageNavWidget.h  PageNavWidget.ui  PreviewerSelectionTypes.h  PreviewerWidget.cpp  PreviewerWidget.h  PreviewerWidget.ui  ScanWidget.cpp  ScanWidget.h  ScanWidget.ui
src/components/models/: BookEditorModel.cpp  BookEditorModel.h  PagesDelegate.cpp  PagesDelegate.h  PagesModel.cpp  PagesModel.h
src/components/props/: PropsEditor.cpp  PropsEditor.h  PropsEditor.ui  PropsEditorTypes.h
src/data/: AppSettings.cpp  AppSettings.h  Database.cpp  Database.h  PageSettingsModel.cpp  PageSettingsModel.h  ScanOptionsModel.cpp  ScanOptionsModel.h  StaticJsonDelegate.cpp  StaticJsonDelegate.h  StaticJsonEditor.cpp  StaticJsonEditor.h  StaticJsonEditor.ui  StaticJsonModel.cpp  StaticJsonModel.h  book.cpp  book.h
src/dialogs/: NewDialog.cpp  NewDialog.h  OpenDialog.cpp  OpenDialog.h
src/imports/: jsonimports.cpp  jsonimports.h  opencvimports.cpp  opencvimports.h  qcoroimports.h  qtimports.h  stdimports.h
src/mouse/: MouseAction.cpp  MouseAction.h  MouseHandler.cpp  MouseHandler.h
src/steps/: CleaningStep.cpp  CleaningStep.h  CroppingStep.cpp  CroppingStep.h  FinalStep.cpp  FinalStep.h  MergingStep.cpp  MergingStep.h  Step.cpp  Step.h
src/widgets/: ImageViewerWidget.cpp  ImageViewerWidget.h  PreviewerSelector.cpp  PreviewerSelector.h  PreviewerSelector.ui  PreviewerSelectorTypes.h  ScanButton.cpp  ScanButton.h  ScanButtons.cpp  ScanButtons.h  ScanButtons.ui  ScanButtonsTypes.h  ScanButtonsWidget.cpp  ScanButtonsWidget.h  SelectionRectTypes.h  SelectionRectWidget.cpp  SelectionRectWidget.h  TimelineWidget.cpp  TimelineWidget.h  TimelineWidget.ui
testBook/: book.json
